2011-06-30  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Implement WebCore::defaultDetailsSummaryText()
        https://bugs.webkit.org/show_bug.cgi?id=63700

        * public/WebLocalizedString.h: Add new key.
        * src/LocalizedStrings.cpp: Call query() with the new key.
        (WebCore::defaultDetailsSummaryText):

2011-06-30  Andrew Scherkus  <scherkus@chromium.org>

        Unreviewed.

        Temporarily disabling WTF_USE_WEBAUDIO_FFMPEG due to FFmpeg update.

        * features.gypi:

2011-06-30  John Bates  <jbates@google.com>

        Reviewed by James Robinson.

        Chromium bug: Compositing on a lost context causes latch deadlocks.
        The cause of deadlock was that a setLatch command is added to the lost
        compositor GL context, and a waitLatch would never complete on a child context.
        This change checks whether the compositor context is in error state before
        doing the compositing.
        https://bugs.webkit.org/show_bug.cgi?id=63681

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::composite):

2011-06-30  Cary Clark  <caryclark@google.com>

        Reviewed by James Robinson.

        Use Skia if Skia on Mac Chrome is enabled
        https://bugs.webkit.org/show_bug.cgi?id=62999

        * WebKit.gyp:
        If building for Skia, exclude CG files.
        If not, exclude Skia files.

        * features.gypi:
        Enable Skia on Chromium Mac if so instructed by the gyp define.
        Allow Skia to be hardware accelerated on the Mac.

        * public/WebCommon.h:
        If Skia is defined on the Mac, define it in the WebXXX
        interfaces as well.

2011-06-30  Sreeram Ramachandran  <sreeram@chromium.org>

        Reviewed by Adam Barth.

        Suppress modal JavaScript/HTML dialogs during unload events
        https://bugs.webkit.org/show_bug.cgi?id=56397

        Implementation of the new shouldRunModalDialogDuringPageDismissal() API