@@ -1,3 +1,15 @@
+2011-06-30  Noel Gordon  <noel.gordon@gmail.com>
+
+        Reviewed by Hajime Morita.
+
+        [Chromium] Remove WebBindings::makeNode.
+        https://bugs.webkit.org/show_bug.cgi?id=63613
+
+        Dead code elimination. No change in behaviour, so no new tests.
+
+        * public/WebBindings.h:
+        * src/WebBindings.cpp:
+
 2011-06-30  Kent Tamura  <tkent@chromium.org>
 
         Reviewed by Darin Fisher.
